[package]
name = "ln-srml"
version = "2.0.0"

[dependencies]
ln-primitives = { path = "./primitives" }
sr-primitives = { path = "../../core/sr-primitives" }
substrate-service = { path = "../../core/service" }
ln-manager = { git = "https://github.com/YaaMe/rust-lightning-bitcoinrpc.git", branch = "knarfytrebil" }
exit-future = "0.1"

[features]
default = ["std"]
std = []
