[package]
name = "srml-lightning"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
ln-primitives = { path = "../../core/ln-bridge/primitives", default-features = false }
inherents = { package = "substrate-inherents", path = "../../core/inherents", default-features = false }
support = { package = "srml-support", path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
primitives = { package="substrate-primitives", path = "../../core/primitives", default-features = false }
offchain-primitives = { package = "substrate-offchain-primitives", path = "../../core/offchain/primitives", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "rstd/std",
  "sr-primitives/std",
  "ln-primitives/std",
  "inherents/std",
  "support/std",
  "system/std",
  "serde",
]
