[package]
name = "lightning"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sp-std", path = "../../primitives/std", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
ln-primitives = { path = "../../client/ln-bridge/primitives", default-features = false }
inherents = { package = "sp-inherents", path = "../../primitives/inherents", default-features = false  }
support = { package = "frame-support", path = "../support", default-features = false }
system = { package = "frame-system", path = "../system", default-features = false }

# runtime_io = { package = "sr-io", path = "../../core/sr-io", default-features = false }
sp-io = { path = "../../primitives/io" }
sp-core = { path = "../../primitives/core" }
pallet-offences = { path = "../offences", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "rstd/std",
  "sp-runtime/std",
  "ln-primitives/std",
  "inherents/std",
  "support/std",
  "system/std",
  "serde",
]
