[package]
name = "ln-bridge"
version = "2.0.0"
edition = "2018"

[dependencies]
primitives = { package = "substrate-primitives", path = "../primitives" }
ln-primitives = { path = "./primitives" }
sr-primitives = { path = "../../core/sr-primitives" }
client = { package = "substrate-client", path = "../../core/client" }
# substrate-service = { path = "../../core/service" }
ln-manager = { git = "https://github.com/YaaMe/rust-lightning-bitcoinrpc.git", branch = "knarfytrebil" }
runtime_io = { package = "sr-io", path = "../sr-io" }
futures01 = "0.1.17"
futures = { package = "futures-preview", version = "0.3.0-alpha.19" }
tokio = { version = "=0.2.0-alpha.6" }
exit-future = "0.1"
log = { version = "0.4", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
inherents = { package = "substrate-inherents", path = "../../core/inherents" }
hex = "0.4.0"

[features]
default = ["std"]
std = [
  "codec/std",
]
