[package]
name = "ln-primitives"
version = "2.0.0"

[dependencies]
client = { package = "substrate-client", path = "../../../core/client", default-features = false }
runtime-primitives = { package = "sr-primitives", path = "../../../core/sr-primitives", default-features = false }
[features]
default = ["std"]
std = [
  "client/std",
  "runtime-primitives/std"
]
