[package]
name = "ln-primitives"
version = "2.0.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
client = { package = "substrate-client", path = "../../../core/client", default-features = false }
sr-primitives = { package = "sr-primitives", path = "../../../core/sr-primitives", default-features = false }
rstd = { package = "sr-std", path = "../../sr-std", default-features = false }
[features]
default = ["std"]
std = [
  "client/std",
  "codec/std",
  "rstd/std",
  "serde",
  "sr-primitives/std"
]
